--- a/public/index.html
+++ b/public/index.html
@@ -1,62 +1,55 @@
-﻿<!doctype html>
-<html lang="en">
+﻿<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AI Tools - CODM Tips & Local Replies</title>
-  <link rel="stylesheet" href="app.css" />
+    <title>AI Tools</title>
+    <style>
+        body { font-family: Arial; margin: 40px; }
+        .card { background: #f5f5f5; padding: 20px; margin: 20px 0; border-radius: 8px; }
+        button { background: #007acc; color: white; padding: 10px; border: none; border-radius: 4px; cursor: pointer; }
+        pre { background: #1e1e1e; color: #fff; padding: 15px; border-radius: 4px; }
+    </style>
 </head>
 <body>
-  <header>
     <h1>AI Tools - CODM Coach & Local Reply</h1>
-    <p class="subtitle">Generate CODM tips or draft friendly replies for local businesses.</p>
-  </header>
-  <main class="container">
-    <section class="card">
-      <h2>CODM Gameplay Tips</h2>
-      <div class="form-row">
-        <label>Weapon type<input id="codm-weapon" placeholder="e.g. assault rifle"/></label>
-        <label>Playstyle<input id="codm-playstyle" placeholder="e.g. aggressive, passive"/></label>
-      </div>
-      <div class="form-row">
-        <label>Map<input id="codm-map" placeholder="e.g. Hackney Yard"/></label>
-        <label>Device<input id="codm-device" placeholder="e.g. Android"/></label>
-        <label>Skill level<select id="codm-skill">
-          <option>beginner</option><option>intermediate</option><option>advanced</option>
-        </select></label>
-      </div>
-      <button id="btn-codm" class="btn">Get CODM Tips</button>
-      <pre id="codm-output" class="output"></pre>
-    </section>
-    <section class="card">
-      <h2>Local Business Reply</h2>
-      <div class="form-row">
-        <label>Business type<input id="lr-business" placeholder="e.g. bakery"/></label>
-      </div>
-      <div class="form-row">
-        <label>Customer message<textarea id="lr-message" placeholder="Customer's message..."></textarea></label>
-      </div>
-      <div class="form-row">
-        <label>Tone<select id="lr-tone">
-          <option>warm and friendly</option><option>professional</option><option>casual</option>
-        </select></label>
-        <label>Extra info<input id="lr-extra" placeholder="e.g. 24-48 hours notice"/></label>
-      </div>
-      <button id="btn-lr" class="btn">Draft Reply</button>
-      <pre id="lr-output" class="output"></pre>
-    </section>
-    <section class="card small">
-      <h3>Notes</h3>
-      <ul>
-        <li>OpenAI key is stored on the server. Do not add it to client code.</li>
-        <li>If you are under 18, ask a parent/guardian to create the OpenAI account and handle payments.</li>
-        <li>Usage has a simple daily limit per IP to control costs.</li>
-      </ul>
-    </section>
-  </main>
-  <footer>
-    <small>&copy; AI Tools - Build & Learn</small>
-  </footer>
-  <script src="app.js"></script>
+    <div class="card">
+        <h2>CODM Tips</h2>
+        <input id="weapon" placeholder="Weapon type">
+        <button onclick="getCODMTips()">Get Tips</button>
+        <pre id="codm-output"></pre>
+    </div>
+    <div class="card">
+        <h2>Business Reply</h2>
+        <input id="business" placeholder="Business type">
+        <textarea id="message" placeholder="Customer message"></textarea>
+        <button onclick="getBusinessReply()">Draft Reply</button>
+        <pre id="business-output"></pre>
+    </div>
+    <script>
+        async function getCODMTips() {
+            const output = document.getElementById("codm-output");
+            output.textContent = "Loading...";
+            const response = await fetch("/api/codm", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ weapon_type: document.getElementById("weapon").value })
+            });
+            const data = await response.json();
+            output.textContent = JSON.stringify(data, null, 2);
+        }
+        async function getBusinessReply() {
+            const output = document.getElementById("business-output");
+            output.textContent = "Loading...";
+            const response = await fetch("/api/localreply", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ 
+                    business_type: document.getElementById("business").value,
+                    customer_message: document.getElementById("message").value
+                })
+            });
+            const data = await response.json();
+            output.textContent = JSON.stringify(data, null, 2);
+        }
+    </script>
 </body>
 </html>
