--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </div>
                 <div class="form-group">
                     <label for="customer-message">Customer Message</label>
-                    <textarea id="customer-message" placeholder="Paste the customer's message or review here..."></textarea>
+                    <textarea id="customer-message" placeholder="Paste the customer'"'"'s message or review here..."></textarea>
                 </div>
                 <button class="btn" onclick="getBusinessReply()">
                     <span class="icon">✍️</span> Draft Business Reply
